--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "lodash.sortby": "^4.7.0",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "eslint-config-prettier": "^2.3.0",
